// Vitest Snapshot v1

exports[`Line > Should render <Line/> when columns: [ { hover: undefined, …(2) } ], className: 'myclass', modifier: 'modifier', children: { …(9) } 1`] = `
<tbody>
  <tr
    aria-label="table-body-line"
    class="myclass myclass--modifier"
  >
    <td
      class="af-table__cell"
    >
      F
    </td>
    <td>
      child
    </td>
  </tr>
</tbody>
`;

exports[`Line > Should render <Line/> when columns: [ { hover: undefined, …(2) } ], className: undefined, modifier: 'modifier', children: undefined 1`] = `
<tbody>
  <tr
    aria-label="table-body-line"
    class="af-table__tr af-table__tr--modifier"
  >
    <td
      class="af-table__cell"
    >
      F
    </td>
  </tr>
</tbody>
`;

exports[`Line > Should render <Line/> when columns: [ { hover: undefined, …(2) } ], className: undefined, modifier: undefined, children: undefined 1`] = `
<tbody>
  <tr
    aria-label="table-body-line"
    class="af-table__tr"
  >
    <td
      class="af-table__cell"
    >
      F
    </td>
  </tr>
</tbody>
`;

exports[`Line > Should render <Line/> when columns: [], className: undefined, modifier: undefined, children: undefined 1`] = `
<tbody>
  <tr
    aria-label="table-body-line"
    class="af-table__tr"
  />
</tbody>
`;

exports[`Line > Should render <Line/> when columns: undefined, className: undefined, modifier: undefined, children: undefined 1`] = `
<tbody>
  <tr
    aria-label="table-body-line"
    class="af-table__tr"
  />
</tbody>
`;
